# deadcheck

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: analyzer.rs  cli.rs  confidence.rs  config.rs  fix.rs  graph.rs  lib.rs  main.rs  output.rs  parser.rs  resolver.rs  scanner.rs  types.rs  watch.rs
tests/: integration_test.rs
tests/fixtures/simple/: package.json
tests/fixtures/simple/src/: dead.ts  index.ts  utils.ts
